# clawbolt

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  TODOS.md  alembic.ini  docker-compose.yml  pyproject.toml  vulture_whitelist.py
.claude/skills/pdf/: SKILL.md
.github/: pull_request_template.md
.github/workflows/: check-linq-spec.yml  ci.yml  deploy-docs.yml  pr-template-check.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_contractor_role.py  002_add_heartbeat_checklist_items.py  002_add_invoices.py  005_add_llm_usage_logs.py  006_add_calendar_configs.py  007_use_timestamptz.py  008_add_channel_route_enabled.py  009_add_oauth_tokens.py  010_add_cache_token_columns.py  015_permissions_to_db.py
backend/app/: bus.py  config.py  database.py  enums.py  errors.py  main.py  models.py  query_helpers.py  schemas.py
backend/app/agent/: approval.py  client_db.py  compaction.py  concurrency.py  context.py  core.py  dto.py  events.py  file_store.py  heartbeat.py  ingestion.py  llm_parsing.py  media_staging.py  memory.py  memory_db.py  messages.py  onboarding.py  profile.py  router.py  session_db.py  stores.py  system_prompt.py  tool_errors.py  tool_summary.py  trimming.py  user_db.py
docs/: astro.config.mjs  linq-api-v3.yaml  package-lock.json  package.json
e2e/oss/: smoke.spec.ts
frontend/: index.html  knip.config.ts  openapi.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  api.ts  hero.ts  index.css  main.tsx  types.ts
scripts/: setup-tunnel.sh  update_companycam_models.py
tests/: conftest.py  test_agent.py  test_agent_events.py  test_agent_messages.py  test_agent_native_storage.py  test_allowlist_empty_warning.py  test_approval.py  test_async_file_io.py  test_auth.py  test_bluebubbles_channel.py  test_bus.py  test_calendar_config.py  test_calendar_service.py  test_calendar_tools.py  test_channel_config.py  test_channel_routes.py  test_channels.py  test_checklist_endpoints.py  test_checklist_tools.py  test_compaction.py  test_companycam_tools.py  test_concurrency.py  test_config_validation.py  test_conversation_continuity.py  test_cors.py  test_database.py  test_defaults_from_settings.py  test_email_service.py  test_email_tools.py  test_error_handling.py  test_estimates.py  test_file_cataloging.py  test_file_store_base.py  test_health.py  test_heartbeat.py  test_heartbeat_endpoints.py  test_heartbeat_logs_endpoint.py  test_heartbeat_migration.py  test_heartbeat_text.py  test_heartbeat_tools.py  (+69 more)
tests/e2e/: conftest.py  test_telegram_e2e.py  test_twilio_e2e.py
tests/integration/: conftest.py  test_agent_native_storage_evals.py  test_dashboard_telegram.py  test_estimate_integration.py  test_heartbeat_integration.py  test_llm_integration.py  test_memory_integration.py  test_onboarding_integration.py  test_vision_integration.py
tests/mocks/: bluebubbles.py  google_calendar.py  linq.py  llm.py  quickbooks.py  storage.py  telegram.py
(+174 files in other folders)
